# cntxdemo

./: .gitignore  merged_data.csv  merged_ingredient_data.csv  ntbk.ipynb  processing.py  pyproject.toml  snp_ingredient_mapping.csv  snp_mapping.csv  snpmapping.csv  streamlit_app.py
data/: mapping.csv  mapping.xlsx  snp_mapping.csv
