[tool.poetry]
name = "cntx-demo"
version = "0.1.0"
description = ""
authors = ["cntx-gnewton <gnewton@cosnetix.com>"]
readme = "README.md"
packages = [{include = "cntx_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
pandas = "^2.2.3"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
